--- a/style.css
+++ b/style.css
@@ -22,8 +22,8 @@ a{
 .masthead{
     background-color: #2c3e50;
     width:100%;
-    height:50px;
     position:relative;
+    overflow: hidden;
 }
 .main-masthead{
     width:1100px;
@@ -35,7 +35,6 @@ a{
 .main-masthead > ul > li {
     display:inline-block;
     float:right;
-
 }
 .main-masthead > ul > li > a{
     display: block;
@@ -43,7 +42,6 @@ a{
     padding:1.1rem;
     font-size:.9rem;
     font-family: 'behrooz';
-    line-height: 1;
 }
 .main-masthead > ul > li > a:hover{
     background-color: #2ecc71;
