--- a/style.css
+++ b/style.css
@@ -8,9 +8,16 @@ body{
     color:#444;
     direction:rtl;
 }
+ul{
+    margin:0;
+    padding:0;
+}
 li{
     list-style:none;
 
+}
+.clear{
+    clear: both;
 }
 a{
     text-decoration: none;
@@ -18,6 +25,9 @@ a{
     -webkit-transition:all .2s ease-in-out;  
     -moz-transition:all .2s ease-in-out;  
     -o-transition:all .2s ease-in-out;  
+}
+:focus{
+    outline:0;
 }
 .masthead{
     background-color: #2c3e50;
@@ -44,5 +54,100 @@ a{
     font-family: 'behrooz';
 }
 .main-masthead > ul > li > a:hover{
+    background-color: #2ecc71;
+}
+.search{
+    float: left;
+    margin-top:.8rem;
+}
+.search input{
+    padding:.8rem;
+    border:2px solid #23313f;
+    background:#23313f url(images/search.png) 2%  no-repeat;
+    color:#fdfdfd;
+}
+.search input:focus{
+    border:2px solid #27ae60;
+    border-radius:2px;
+    transition:all .2s ease-in-out;  
+    -webkit-transition:all .2s ease-in-out;  
+    -moz-transition:all .2s ease-in-out;  
+    -o-transition:all .2s ease-in-out;
+}
+
+#main{
+    width:1100px;
+    margin:20px auto;
+}
+
+#header-nav{
+    margin:0 auto;
+
+}
+#header-nav ul > li{
+    float: right;
+    width:100px;
+    height:105px;
+}
+#header-nav ul > li > a{
+    display:block;
+    text-align: center;
+    color:#fdfdfd;
+    font:.8rem 'behrooz' , tahoma;
+}
+#header-nav .fa{
+    margin-top:10px;
+}
+.nav-txt{
+    line-height: 2;
+}
+.logo{
+    float:left;
+}
+
+
+            /*      slider         */
+
+
+#metro-box{
+    width:100%;
+    height:445px;
+    margin:30px 0;
+    background-color: #ccc;
+}
+#metro-box .column{
+    width:1030px;
+    float:left;
+}
+.metro-item{
+    width:338px;
+    height:220px;
+    margin-right:5px;
+    margin-bottom:5px;
+    float: left;
+    overflow: hidden;
+}
+.metro-item.big{
+    width:681px;
+    height:220px;
+}
+.metro-item img{
+    display: block;
+    min-width: 100%;
+    height:220px;
+    object-fit: cover;
+}
+.metro-item .box-img{
+    transition:all .2s ease-in-out;  
+    -webkit-transition:all .2s ease-in-out;  
+    -moz-transition:all .2s ease-in-out;  
+    -o-transition:all .2s ease-in-out;
+    position: relative;
+}
+.metro-item .box-img .metro-content{
+    position:absolute;
+    bottom:-160px;
+    left:0;
+    padding:1em;
     background-color: #2ecc71;
 }
