--- a/style.css
+++ b/style.css
@@ -6,7 +6,6 @@ body{
     background-color: #f3f3f3;
     font:12px tahoma;
     color:#444;
-    direction:rtl;
 }
 ul{
     margin:0;
@@ -111,9 +110,9 @@ a{
 
 #metro-box{
     width:100%;
-    height:445px;
+    height:480px;
     margin:30px 0;
-    background-color: #ccc;
+    overflow: hidden;
 }
 #metro-box .column{
     width:1030px;
@@ -145,9 +144,50 @@ a{
     position: relative;
 }
 .metro-item .box-img .metro-content{
+    /* height:160px; */
+    font:.7rem 'behrooz',tahoma;
+    color:#fdfdfd;
     position:absolute;
-    bottom:-160px;
+    bottom:-100%;
     left:0;
     padding:1em;
-    background-color: #2ecc71;
+    background-color: rgba(46, 204, 113,.6);
+    transition:all .2s ease-in-out;  
+    -webkit-transition:all .2s ease-in-out;  
+    -moz-transition:all .2s ease-in-out;  
+    -o-transition:all .2s ease-in-out;
+}
+.metro-item .box-img:hover .metro-content{
+    bottom:0;
+}
+.color_1{
+    background:rgba(155, 89, 182,.6) !important;
+}
+.color_2{
+    background:rgba(52, 73, 94,.6) !important;
+}
+.color_3{
+    background:rgba(231, 76, 60,.6) !important;
+}
+#metro-box .mCSB_container{
+	height: 450px;
+	display: block;
+    overflow: hidden;
+}
+#metro-box .mCSB_scrollTools{
+	width: 100%;
+	height: 20px;
+	bottom: 0;
+	left: 0;
+	overflow: hidden;
+}
+#metro-box .mCSB_draggerRail{
+	width: 100%;
+	height: 20px;
+	background: #FFF;
+}
+#metro-box .mCSB_dragger_bar{
+	width: 100%;
+	height: 20px;
+	background: #222;
 }
